--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -13,12 +13,12 @@
 
 .visitor-add {
   margin-bottom: 20px;
-  font-size: $font-size-lg;
-  color: $text-color;
+  font-size: var(--font-size-lg);
+  color: var(--text-color);
 }
 
 .visitor-add-form {
-  background-color: $card-bg;
+  background-color: var(--card-bg);
   padding: 20px 30px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -35,8 +35,8 @@
 label {
   display: block;
   margin-bottom: 5px;
-  font-weight: $font-weight-bold;
-  color: $text-color;
+  font-weight: var(--font-weight-bold);
+  color: var(--text-color);
 }
 
 input,
@@ -44,49 +44,49 @@ select,
 textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid $input-border;
+  border: 1px solid var(--input-border);
   border-radius: 4px;
-  font-size: $font-size-base;
-  background-color: $background-color;
+  font-size: var(--font-size-base);
+  background-color: var(--background-color);
 }
 
 input:focus,
 select:focus,
 textarea:focus {
-  border-color: $primary-color;
+  border-color: var(--primary-color);
   outline: none;
   background-color: #fff;
 }
 
 .submit-button {
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: white;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
-  font-size: $font-size-base;
+  font-size: var(--font-size-base);
   cursor: pointer;
   width: 100%;
   text-align: center;
 }
 
 .cancel-button {
-  background-color: $secondary-color;
+  background-color: var(--secondary-color);
   color: red;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
-  font-size: $font-size-base;
+  font-size: var(--font-size-base);
   cursor: pointer;
   width: 100%;
   text-align: center;
 }
 .cancel-button:hover {
-  background-color: $secondary-color-hover;
+  background-color: var(--secondary-color)-hover;
 }
 
 .submit-button:hover {
-  background-color: $button-hover;
+  background-color: var(--button-hover);
 }
 
 /* Adjust styling for photo input and webcam preview */
@@ -111,8 +111,8 @@ textarea:focus {
 .webcam-button {
   margin-top: 10px;
   padding: 8px 12px;
-  font-size: $font-size-base;
-  background-color: $primary-color;
+  font-size: var(--font-size-base);
+  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 4px;
@@ -123,7 +123,7 @@ textarea:focus {
 .capture-button:hover,
 .cancel-webcam:hover,
 .webcam-button:hover {
-  background-color: $button-hover;
+  background-color: var(--button-hover);
 }
 /* Стили для компонента Allvisitors */
 .visitors-all-container {
@@ -132,17 +132,17 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: $background-color;
+  background-color: var(--background-color);
 }
 
 .visitor-all-list {
   margin-bottom: 20px;
-  font-size: $font-size-lg;
-  color: $text-color;
+  font-size: var(--font-size-lg);
+  color: var(--text-color);
 }
 
 .visitor-all-table {
-  background-color: $card-bg;
+  background-color: var(--card-bg);
   padding: 20px 30px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -159,20 +159,20 @@ textarea:focus {
 .table td {
   padding: 10px;
   text-align: left;
-  border: 1px solid $border-color;
+  border: 1px solid var(--border-color);
 }
 
 .table th {
-  background-color: $primary-color;
-  color: $card-bg;
+  background-color: var(--primary-color);
+  color: var(--card-bg);
 }
 
 .table tr:nth-child(even) {
-  background-color: $breadcrumb-bg;
+  background-color: var(--breadcrumb-bg);
 }
 
 .table tr:hover {
-  background-color: $table-hover;
+  background-color: var(--table-hover);
 }
 
 /* Стили для компонента VisitorsView */
@@ -183,18 +183,18 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: $background-color;
+  background-color: var(--background-color);
   height: 100vh;
 }
 
 .visitor-view-title {
-  font-size: $font-size-lg;
-  color: $text-color;
+  font-size: var(--font-size-lg);
+  color: var(--text-color);
   margin-bottom: 20px;
 }
 
 .visitor-view-card {
-  background-color: $card-bg;
+  background-color: var(--card-bg);
   padding: 20px 30px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -230,18 +230,18 @@ textarea:focus {
 
 .visitor-info p {
   font-size: 24px;
-  color: $text-color;
+  color: var(--text-color);
   margin: 10px 0;
 }
 
 .visitor-info strong {
-  font-weight: $font-weight-bold;
+  font-weight: var(--font-weight-bold);
 }
 
 .btn-view-visitor {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 4px;
@@ -252,27 +252,27 @@ textarea:focus {
 }
 
 .btn-view-visitor:hover {
-  background-color: $button-hover;
+  background-color: var(--button-hover);
 }
 
 .btn-view-visitor-secondary {
-  background-color: $success-color;
+  background-color: var(--success-color);
 }
 
 .btn-view-visitor-secondary:hover {
-  background-color: $success-color-hover;
+  background-color: var(--success-color)-hover;
 }
 
 .p-2 {
   padding: 2px 5px 2px 5px !important;
-  font-size: $font-size-base;
-  background-color: $primary-color;
+  font-size: var(--font-size-base);
+  background-color: var(--primary-color);
   border: 0;
   border-radius: 2px;
 }
 
 .p-2:hover {
-  background-color: $success-color;
+  background-color: var(--success-color);
   border: 0;
 }
 .navigation-underline {
@@ -301,13 +301,13 @@ textarea:focus {
 .submit-button,
 .cancel-button {
   background-color: #fff;
-  color: $primary-color;
-  font-weight: $font-weight-bold;
+  color: var(--primary-color);
+  font-weight: var(--font-weight-bold);
   padding: 3px 5px;
 }
 .submit-button:hover,
 .cancel-button:hover {
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: whitesmoke;
 }
 .btn-info {
