--- a/src/components/Pages/UserPermissions/style.scss
+++ b/src/components/Pages/UserPermissions/style.scss
@@ -1,6 +1,6 @@
-$form-background: #fff;
-$primary-color: #007bff;
-$hover-color: darken($primary-color, 10%);
+var(--form-background): #fff;
+var(--primary-color): #007bff;
+var(--hover-color): darken(var(--primary-color), 10%);
 
 .user-add-container{
     display: flex;
@@ -14,11 +14,11 @@ $hover-color: darken($primary-color, 10%);
 }
 
 .form-container {
-    background-color: $form-background;
+    background-color: var(--form-background);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid lighten($form-background, 10%);
+    border: 1px solid lighten(var(--form-background), 10%);
 }
 
 .form-label {
@@ -43,7 +43,7 @@ $hover-color: darken($primary-color, 10%);
     width: 100%;
 
     &:hover {
-        background-color: $hover-color;
+        background-color: var(--hover-color);
         color: #fff;
     }
 }
