--- a/src/components/LogoutButton/style.scss
+++ b/src/components/LogoutButton/style.scss
@@ -7,6 +7,11 @@
   width: 100%;
   cursor: pointer;
   padding: 12px;
+  color: var(--link-default);
+  margin-left: -12px;
+  margin-right: -12px;
+  width: calc(100% + 24px);
+
   &-icon {
     display: flex;
     transform: rotate(180deg);
@@ -16,16 +21,11 @@
   &-text {
     font-size: 14px;
     font-weight: 400;
-    color: var(--link-default);
     border-radius: 4px;
     cursor: pointer;
   }
   &:hover {
-    background-color: var(--sidebar-hover-bg);
-    color: var(--link-hover);
-
-    .logout-text {
-      color: var(--link-hover);
-    }
+    background: var(--sidebar-link-active) !important;
+    color: var(--text-color-secondary) !important;
   }
 }
