--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,8 +3,13 @@
   --success-color: #28a745;
   --success-color-hover: #1b5a29;
   --danger-color: #dc3545;
-  --text-color: #2b3674;
-  --background-color: #ffffff;
+  --text-color: #bac0c7;
+  --text-color-secondary: #8494a7;
+  --link-color: #5a8dee;
+  --white: #ffffff;
+  --border-default: #dfe3e7;
+
+  --background-color: #f2f4f4;
   --border-color: #babec2;
   --breadcrumb-bg: #ffffff;
   --card-bg: #ffffff;
