--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,10 +6,7 @@
 }
 .bg-body-tertiary {
   --bs-bg-opacity: 1;
-  background-color: rgba(
-    var(--bs-tertiary-bg-rgb),
-    var(--bs-bg-opacity)
-  ) !important;
+  background-color: white !important;
 }
 
 .navbar {
