--- a/src/components/Pages/Offices/style.scss
+++ b/src/components/Pages/Offices/style.scss
@@ -1,3 +1,5 @@
+@import "../../../variables.scss";
+
 .offices-add-container {
   display: flex;
   flex-direction: column;
@@ -5,9 +7,10 @@
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  
 }
-
+.offices-wrapper {
+  display: flex;
+}
 .offices-add {
   margin-bottom: 20px;
   font-size: var(--font-size-lg);
@@ -119,11 +122,14 @@ select:focus {
 .breadcrumbs {
   font-size: 14px;
   color: #555;
+  width: fit-content;
+  background-color: var(--background-color);
 }
 
 .breadcrumbs a {
   text-decoration: none;
-  color: #007bff;
+  color: #8f9091;
+  font-size: 14px;
 }
 
 .breadcrumbs a:hover {
@@ -131,7 +137,22 @@ select:focus {
 }
 
 .breadcrumbs span {
-  color: #333;
+  color: #404140;
+  font-size: 16px;
+}
+.searchAddBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.p-1 {
+  padding: 2px 4px;
+  max-width: 120px;
+  width: 120px;
+}
+input{
+  padding: 2px 3px !important;
 }
 .d-row {
   display: flex;
@@ -169,6 +190,6 @@ select:focus {
   color: var(--primary-color);
   border: 0;
 }
-.btn-danger:hover {
-  background-color: red;
+.submit-button:hover {
+  background-color: green !important;
 }
