--- a/src/components/Pages/UserPermissions/style.scss
+++ b/src/components/Pages/UserPermissions/style.scss
@@ -8,7 +8,10 @@
   padding: 20px;
   box-sizing: border-box;
 }
-
+.office-wrapper {
+  display: flex;
+  flex-direction: row;
+}
 .form-container {
   background-color: var(--form-background);
   padding: 20px;
