--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -268,7 +268,12 @@ textarea:focus {
   border: 0;
   border-radius: 2px;
 }
-
+.searchAddBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
 .p-2:hover {
   background-color: var(--success-color);
   border: 0;
