--- a/src/components/dashboard/dashboardStyle.css
+++ b/src/components/dashboard/dashboardStyle.css
@@ -21,12 +21,6 @@
   align-items: end;
 }
 
-h4 {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
 /* Стили для таблиц */
 table {
   width: 100%;
@@ -77,4 +71,39 @@ button:active {
 
 .text-center button {
   margin-top: 20px;
+}
+.sidebar .collapse-button {
+  width: 30px !important;
+  display: flex;
+  height: 25px;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 10px;
+  right: -10px;
+  z-index: 3;
+}
+.section-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h4 {
+    font-size: 14px;
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+
+    padding: 2px;
+  }
+  button {
+    color: grey;
+    padding: 2px;
+    background-color: white;
+    border-bottom: 0;
+    font-size: 14px;
+    border-radius: 5px;
+    margin-bottom: -5px;
+    border-color: grey;
+    filter: drop-shadow(10px 10px 15px rgba(0, 0, 0, 0.3));
+  }
 }
