--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -106,6 +106,7 @@
     border: 1px solid var(--border-default);
     background: var(--white);
     border-radius: 5px;
+    padding: 9px 14px;
   }
 
   .nav-link.active {
@@ -160,7 +161,7 @@
     color: var(--text-color) !important;
     touch-action: none;
     cursor: default;
-
+    padding: 10px 15px !important;
     &:hover {
       color: var(--text-color) !important;
       background: transparent !important;
