--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  // padding: 20px;
+  padding: 20px;
   box-sizing: border-box;
   overflow: auto;
   background-color: var(--background-color);
@@ -109,7 +109,29 @@ textarea:focus {
 .photo-input {
   position: relative;
   display: flex;
+  width: 150px; // Adjust the size as needed
+  height: 150px; // Adjust the size as needed
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px solid #ccc; // Optional, for a border around the image
+  justify-content: center;
+  align-items: center;
+
 }
+.photo-placeholder {
+  display: flex;  
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px dashed #ccc;
+  background-color: #f7f7f7;  
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
 .webcam-container {
   width: 250px;
   height: 250px;
@@ -119,12 +141,31 @@ textarea:focus {
   video {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* This ensures the webcam video fills the container */
+    object-fit: cover;
+    /* This ensures the webcam video fills the container */
   }
 }
+
 .webcam-preview {
   max-width: 100%;
   border-radius: 4px;
+}
+
+
+
+.plus-icon {
+  color: #007bff;
+}
+
+.photo-preview {
+  width: 200px; // Adjust the size as needed
+  height: 200px; // Adjust the size as needed
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px solid #ccc; // Optional, for a border around the image
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .photo-preview img {
@@ -136,6 +177,7 @@ textarea:focus {
   height: 250px;
   object-fit: cover;
 }
+
 .btn-primary {
   padding: 4px 6px;
   font-size: var(--font-size-base);
@@ -147,19 +189,33 @@ textarea:focus {
 
   transition: background-color 0.3s;
 }
+
 .capture-button,
 .cancel-webcam,
 .btn-primary,
 .webcam-button {
-  padding: 4px 6px;
-  font-size: var(--font-size-base);
-  background-color: var(--primary-color);
-  color: white;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
+  // padding: 4px 6px;
+  // font-size: var(--font-size-base);
+  // background-color: var(--primary-color);
+  // color: white;
+  // border: none;
+  // border-radius: 2px;
+  // cursor: pointer;
+  // transition: background-color 0.3s;
 
-  transition: background-color 0.3s;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  appearance: none;
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .capture-button:hover,
@@ -191,11 +247,21 @@ textarea:focus {
 
 // Form labels and buttons inside the form container
 .form-container {
-  background-color: var(--form-background);
-  width: 1200px;
-  border-radius: 5px !important;
+  // background-color: var(--form-background);  
+  // padding: 20px 30px;
+  // border-radius: 8px ;
+  // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  // border: 1px solid var(--lighten-form-background);
+
+  background-color: var(--card-bg);
+  padding: 20px 30px;
+  border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  // border: 1px solid var(--border-color);
+  width: auto;  /* Ensure that the width adjusts based on content */
+  max-width: 100%;  /* Make sure the form container doesn't overflow on small screens */
+  max-height: 80vh;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 .form-label {
@@ -221,6 +287,7 @@ textarea:focus {
 
 // Responsive Styling for smaller screens
 @media (max-width: 600px) {
+
   .visitor-add-form,
   .visitor-view-card {
     width: 100%;
