--- a/src/components/Pages/Departments/style.scss
+++ b/src/components/Pages/Departments/style.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100vh;
-  overflow: hidden;
 }
 
+.department-wrapper {
+  display: flex;
+}
 .department-add {
   margin-bottom: 20px;
   font-size: var(--font-size-lg);
@@ -20,6 +21,8 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
+  margin-top: 20px;
+
 }
 
 .form-group {
@@ -71,7 +74,6 @@ select:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100vh;
   background-color: var(--background-color);
 }
@@ -116,19 +118,19 @@ select:focus {
   background-color: var(--table-hover);
 }
 
-.p-2{
-  padding:2px 5px 2px 5px !important;
+.p-2 {
+  padding: 2px 5px 2px 5px !important;
   font-size: var(--font-size-base);
   background-color: var(--primary-color);
   border: 0;
   border-radius: 2px;
 }
 
-.p-2:hover{
+.p-2:hover {
   background-color: var(--success-color);
   border: 0;
 }
-.navigation-underline{
+.navigation-underline {
   width: 100%;
   padding: 0;
   margin: 3px;
