--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,12 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 @import "/src/variables.scss";
 
+body {
+  font-family: Rubik, Helvetica, Arial, serif !important;
+}
+
 .app {
   display: flex;
-  height: 100vh; /* Full height */
   background-color: var(--background-color);
 
   @media (max-width: 768px) {
@@ -13,9 +16,7 @@
 
 .main {
   flex-grow: 1; /* Main content will take up remaining space */
-  // margin-left: 250px; /* Sidebar width */
 
-  overflow-y: hidden; /* Allow scroll if content overflows */
   background-color: var(--background-color);
 }
 
@@ -23,4 +24,48 @@
 .content {
   padding: 0 20px;
   background-color: var(--background-color);
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.btn-primary,
+.btn-danger,
+.btn-warning {
+  padding: 4px 6px;
+  font-size: var(--font-size-base);
+  cursor: pointer;
+  transition: background-color 0.3s;
+  color: var(--white) !important;
+
+  a {
+    color: var(--white) !important;
+
+    &:hover {
+      color: var(--white) !important;
+    }
+  }
+}
+
+.btn-primary {
+  background-color: var(--primary-color) !important;
+  border: 1px solid var(--hover-color) !important;
+
+  &:hover {
+    background-color: var(--hover-color) !important;
+  }
+}
+
+.btn-danger {
+  background-color: var(--red) !important;
+  border: 1px solid var(--red20) !important;
+
+  &:hover {
+    background-color: var(--red20) !important;
+  }
+}
+
+.error {
+  color: var(--red);
 }
