--- a/src/components/Pages/BreadcrumpStyle.scss
+++ b/src/components/Pages/BreadcrumpStyle.scss
@@ -1,43 +1,39 @@
 .breadcrumbs {
-    // margin-top: 10px;
-    // border: 1px  solid var(--border-color);
-    font-size: 14px;
-    color: #555;
-    width: fit-content;
-    background-color: var(--background-color);
-    padding: 10px 5px;
-  }
-  
-  .breadcrumbs a {
-    text-decoration: none;
-    color: #8f9091;
-    font-size: 14px;
-  }
-  
-  .breadcrumbs a:hover {
-    text-decoration: underline;
-  }
-  
-  .breadcrumbs span {
-    color: #404140;
+  // margin-top: 10px;
+  // border: 1px  solid var(--border-color);
+  font-size: 14px;
+  color: var(--text-color-secondary);
+  width: fit-content;
+  background-color: var(--background-color);
+  padding: 10px 5px;
+
+  font-size: 14px;
+  color: #555;
+
+  span {
     font-size: 16px;
-  }
-  .breadcrumb {
-    font-size: 14px;
-    color: #555;
-  
+
+    color: #333;
+
     a {
       text-decoration: none;
       color: var(--primary-color);
       transition: color 0.3s;
+      text-decoration: none;
+      color: #8f9091;
+      font-size: 14px;
+
+      &:hover {
+        cursor: pointer;
+
+        text-decoration: none;
+        color: var(--text-color);
+      }
     }
-  
-    a:hover {
-      text-decoration: underline;
-      color: var(--primary-color);
-    }
-  
-    span {
-      color: #333;
+
+    &:last-child a:hover {
+      cursor: default;
+      color: var(--text-color-secondary);
     }
   }
+}
