--- a/src/components/Pages/Offices/style.scss
+++ b/src/components/Pages/Offices/style.scss
@@ -1,5 +1,3 @@
-@import "../../../variables.scss";
-
 .offices-add-container {
   display: flex;
   flex-direction: column;
@@ -16,57 +14,56 @@
 }
 
 .offices-add-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
   background-color: var(--card-bg);
   padding: 20px 30px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 400px;
   margin-top: 20px;
-}
 
-.form-group {
-  margin-bottom: 15px;
-}
+  .form-group {
+    flex: 1 0 calc(50% - 8px);
+    margin-bottom: 15px;
+  }
 
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: var(--font-weight-bold);
-  color: var(--text-color);
-}
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: var(--font-weight-bold);
+    color: var(--text-color);
+  }
 
-input,
-select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid var(--input-border);
-  border-radius: 4px;
-  font-size: var(--font-size-base);
-  background-color: var(--background-color);
-}
+  input,
+  select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--input-border);
+    border-radius: 4px;
+    font-size: var(--font-size-base);
+    background-color: var(--background-color);
+  }
 
-input:focus,
-select:focus {
-  border-color: var(--primary-color);
-  outline: none;
-  background-color: #fff;
-}
+  input:focus,
+  select:focus {
+    border-color: var(--primary-color);
+    outline: none;
+    background-color: #fff;
+  }
 
-.submit-button {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  font-size: var(--font-size-base);
-  cursor: pointer;
-  width: 100%;
-  text-align: center;
-}
-
-.submit-button:hover {
-  background-color: var(--button-hover);
+  .submit-button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    font-size: var(--font-size-base);
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .offices-all-container {
@@ -117,7 +114,6 @@ select:focus {
   background-color: var(--table-hover);
 }
 
-
 .searchAddBtn {
   display: flex;
   align-items: center;
@@ -158,17 +154,4 @@ input {
 .navigation-underline {
   width: 100%;
   padding: 0;
-}
-
-.btn-danger,
-.btn-warning {
-  padding: 3px 5px;
-
-  border-radius: 2px;
-  background-color: white;
-  color: var(--primary-color);
-  border: 0;
-}
-.submit-button:hover {
-  background-color: green !important;
 }
