--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -1,273 +1,246 @@
-// Root variables for colors, fonts, etc.
-:root {
-  --primary-color: #007bff;
-  --secondary-color: #6c757d;
-  --text-color: #333;
-  --card-bg: #fff;
-  --border-color: #ccc;
-  --background-color: #f4f6f9;
-  --button-hover: #0056b3;
-  --font-size-base: 1rem;
-  --font-size-lg: 1.25rem;
-  --font-weight-bold: 700;
-  --success-color: #28a745;
-  --error-color: #dc3545;
-}
-
-// General container for the add visitor page
 .visitor-add-container {
   justify-content: center;
-  box-sizing: border-box;
   background-color: var(--background-color);
-}
-
-// Title styling
-.visitor-add {
-  margin-bottom: 20px;
-  font-size: var(--font-size-lg);
-  color: var(--text-color);
-  text-align: center;
-}
-
-// Form container for adding visitors
-.visitor-add-form {
-  background-color: var(--card-bg);
-  // padding: 20px 30px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-  overflow-y: auto;
-  box-sizing: border-box;
-}
-
-// Form elements styling
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: var(--font-weight-bold);
-  color: var(--text-color);
-}
-
-input,
-select,
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-  font-size: var(--font-size-base);
-  background-color: var(--background-color);
-  transition: border-color 0.3s, background-color 0.3s;
-}
-
-input:focus,
-select:focus,
-textarea:focus {
-  border-color: var(--primary-color);
-  outline: none;
-  background-color: #fff;
-}
-
-.submit-button,
-.cancel-button {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  font-size: var(--font-size-base);
-  cursor: pointer;
-  width: 100%;
-  text-align: center;
-  transition: background-color 0.3s ease;
-}
-
-.submit-button:hover,
-.cancel-button:hover {
-  background-color: var(--button-hover);
-}
-
-.cancel-button {
-  background-color: var(--secondary-color);
-  color: white;
-}
-
-// ы
-// Adjust styling for photo input and webcam preview
-.photo-input {
-  position: relative;
-  display: flex;
-  width: 70px; // Adjust the size as needed
-  height: 70px; // Adjust the size as needed
-  overflow: hidden;
-  border-radius: 50%;
-  border: 2px var(--border-color); // Optional, for a border around the image
-  justify-content: center;
-  align-items: center;
-}
-.photo-placeholder {
-  display: flex;
-  width: 70px;
-  height: 70px;
-  overflow: hidden;
-  border-radius: 50%;
-  // border: 2px dashed #ccc;
-  background-color: #f7f7f7;
-  font-size: 1rem;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: var(--text-color-secondary);
-}
-
-.webcam-container {
-  width: 250px;
-  height: 250px;
-  overflow: hidden;
-  position: relative;
-
-  video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* This ensures the webcam video fills the container */
-  }
-}
-
-.webcam-preview {
-  max-width: 100%;
-  border-radius: 4px;
-}
-
-.plus-icon {
-  color: #007bff;
-}
-
-.photo-preview {
-  width: 200px; // Adjust the size as needed
-  height: 200px; // Adjust the size as needed
-  overflow: hidden;
-  border-radius: 50%;
-  border: 2px solid #ccc; // Optional, for a border around the image
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.photo-preview img {
-  // width: 100%;
-  // max-height: 200px;
-  // object-fit: cover;
-  // border-radius: 4px;
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-}
-
-.btn-primary {
-  padding: 4px 6px;
-  font-size: var(--font-size-base);
-  background-color: var(--primary-color);
-  color: white;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
-
-  transition: background-color 0.3s;
-}
-
-.capture-button,
-.cancel-webcam,
-.btn-primary,
-.webcam-button {
-  // padding: 4px 6px;
-  // font-size: var(--font-size-base);
-  // background-color: var(--primary-color);
-  // color: white;
-  // border: none;
-  // border-radius: 2px;
-  // cursor: pointer;
-  // transition: background-color 0.3s;
-
-  display: block;
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: var(--bs-body-color);
-  appearance: none;
-  background-color: var(--bs-body-bg);
-  background-clip: padding-box;
-  border: var(--bs-border-width) solid var(--bs-border-color);
-  border-radius: var(--bs-border-radius);
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.capture-button:hover,
-.cancel-webcam:hover,
-.webcam-button:hover {
-  background-color: var(--secondary-color);
-}
-
-// Form labels and buttons inside the form container
-.form-container {
-  // background-color: var(--form-background);
-  // padding: 20px 30px;
-  // border-radius: 8px ;
-  // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  // border: 1px solid var(--lighten-form-background);
-
-  background-color: var(--card-bg);
-  padding: 0 30px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: auto; /* Ensure that the width adjusts based on content */
-  max-width: 100%; /* Make sure the form container doesn't overflow on small screens */
-  max-height: 100vh;
-  // overflow-y: auto;
-  box-sizing: border-box;
-}
-
-.form-label {
-  font-weight: var(--font-weight-bold);
-  font-size: 16px !important;
-  color: var(--text-color);
-}
-
-.form-label-head {
-  font-weight: var(--font-weight-bold);
-  font-size: 14px !important;
-  color: var(--text-color);
-  margin-bottom: 6px !important;
-}
-
-.actions {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding-top: 10px;
-}
-
-// Responsive Styling for smaller screens
-@media (max-width: 600px) {
-  .visitor-add-form,
-  .visitor-view-card {
-    width: 100%;
-    padding: 15px;
+  .visitor-add-title {
+    margin-bottom: 20px;
+    font-size: var(--font-size-lg);
+    color: var(--text-color);
+    text-align: center;
   }
 
-  .submit-button,
-  .cancel-button {
-    padding: 12px;
+  .form-container {
+    background-color: var(--card-bg);
+    padding: 0 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: auto; /* Ensure that the width adjusts based on content */
+    max-width: 100%; /* Make sure the form container doesn't overflow on small screens */
+    box-sizing: border-box;
+    color: var(--text-color-secondary) !important;
   }
 
   .form-label-head {
+    color: var(--text-color-secondary) !important;
     font-size: 1.25rem;
+  }
+
+  .form-control {
+    background-color: var(--card-bg);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+    font-size: var(--font-size-base);
+    padding: 10px !important;
+    transition: border-color 0.3s, background-color 0.3s;
+  }
+
+  .photo-preview {
+    width: 200px; // Adjust the size as needed
+    height: 200px; // Adjust the size as needed
+    overflow: hidden;
+    border-radius: 50%;
+    border: 2px solid #ccc; // Optional, for a border around the image
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .photo-preview img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+  }
+
+  .photo-input {
+    position: relative;
+    display: flex;
+    width: 70px; // Adjust the size as needed
+    height: 70px; // Adjust the size as needed
+    overflow: hidden;
+    border-radius: 50%;
+    border: 2px var(--border-color); // Optional, for a border around the image
+    background-color: var(--link-color);
+    justify-content: center;
+    align-items: center;
+  }
+  .photo-placeholder {
+    display: flex;
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 50%;
+    // border: 2px dashed #ccc;
+    background-color: #f7f7f7;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: var(--text-color-secondary);
+  }
+
+  &-footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding-top: 10px;
+
+    button {
+      flex: 1 1 50%;
+    }
+  }
+
+  // Form container for adding visitors
+  // .visitor-add-form {
+  //   background-color: var(--card-bg);
+  //   // padding: 20px 30px;
+  //   border-radius: 8px;
+  //   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  //   overflow-y: auto;
+  //   box-sizing: border-box;
+
+  //   .form-group {
+  //     margin-bottom: 15px;
+  //   }
+
+  //   label {
+  //     display: block;
+  //     margin-bottom: 5px;
+  //     font-weight: var(--font-weight-bold);
+  //     color: var(--text-color);
+  //   }
+
+  //   input,
+  //   select,
+  //   textarea {
+  //     width: 100%;
+  //     padding: 10px;
+  //     border: 1px solid var(--border-color);
+  //     border-radius: 4px;
+  //     font-size: var(--font-size-base);
+  //     background-color: var(--background-color);
+  //     transition: border-color 0.3s, background-color 0.3s;
+  //   }
+
+  //   input:focus,
+  //   select:focus,
+  //   textarea:focus {
+  //     border-color: var(--primary-color);
+  //     outline: none;
+  //     background-color: #fff;
+  //   }
+
+  //   .submit-button,
+  //   .cancel-button {
+  //     background-color: var(--primary-color);
+  //     color: white;
+  //     padding: 10px 15px;
+  //     border: none;
+  //     border-radius: 4px;
+  //     font-size: var(--font-size-base);
+  //     cursor: pointer;
+  //     width: 100%;
+  //     text-align: center;
+  //     transition: background-color 0.3s ease;
+  //   }
+
+  //   .cancel-button {
+  //     background-color: var(--secondary-color);
+  //     color: white;
+  //   }
+
+  //   // ы
+  //   // Adjust styling for photo input and webcam preview
+
+  //   .webcam-container {
+  //     width: 250px;
+  //     height: 250px;
+  //     overflow: hidden;
+  //     position: relative;
+
+  //     video {
+  //       width: 100%;
+  //       height: 100%;
+  //       object-fit: cover;
+  //       /* This ensures the webcam video fills the container */
+  //     }
+  //   }
+
+  //   .webcam-preview {
+  //     max-width: 100%;
+  //     border-radius: 4px;
+  //   }
+
+  //   .plus-icon {
+  //     color: #007bff;
+  //   }
+
+  //   .capture-button,
+  //   .cancel-webcam,
+  //   .webcam-button {
+  //     // padding: 4px 6px;
+  //     // font-size: var(--font-size-base);
+  //     // background-color: var(--primary-color);
+  //     // color: white;
+  //     // border: none;
+  //     // border-radius: 2px;
+  //     // cursor: pointer;
+  //     // transition: background-color 0.3s;
+
+  //     display: block;
+  //     width: 100%;
+  //     padding: 0.375rem 0.75rem;
+  //     font-size: 1rem;
+  //     font-weight: 400;
+  //     line-height: 1.5;
+  //     color: var(--bs-body-color);
+  //     appearance: none;
+  //     background-color: var(--bs-body-bg);
+  //     background-clip: padding-box;
+  //     border: var(--bs-border-width) solid var(--bs-border-color);
+  //     border-radius: var(--bs-border-radius);
+  //     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  //   }
+
+  //   .capture-button:hover,
+  //   .cancel-webcam:hover,
+  //   .webcam-button:hover {
+  //     background-color: var(--secondary-color);
+  //   }
+
+  //   // Form labels and buttons inside the form container
+  //   .form-container {
+  //   }
+
+  //   .form-label {
+  //     font-weight: var(--font-weight-bold);
+  //     font-size: 16px !important;
+  //     color: var(--text-color);
+  //   }
+
+  //   .form-label-head {
+  //     font-weight: var(--font-weight-bold);
+  //     font-size: 14px !important;
+  //     color: var(--text-color);
+  //     margin-bottom: 6px !important;
+  //   }
+
+  //   .actions {
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //     gap: 10px;
+  //     padding-top: 10px;
+  //   }
+  // }
+
+  // Form elements styling
+
+  // Responsive Styling for smaller screens
+  @media (max-width: 600px) {
+    .visitor-view-card {
+      width: 100%;
+      padding: 15px;
+    }
   }
 }
