--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,5 @@
 .header {
+  padding: 0 12px;
   .navbar {
     position: relative;
     display: flex;
@@ -26,5 +27,13 @@
 
   @media (max-width: 768px) {
     padding-left: 35px;
+  }
+
+  &--sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
   }
 }
