--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -89,7 +89,7 @@
   }
 
   .sidebar-link.active {
-    background: var(--link-default) !important;
+    background: var(--link-hover) !important;
     border-radius: 5px;
     border-radius: 0;
     color: var(--link-color) !important;
