--- a/src/components/Pages/BreadcrumpStyle.scss
+++ b/src/components/Pages/BreadcrumpStyle.scss
@@ -1,6 +1,4 @@
 .breadcrumbs {
-  // margin-top: 10px;
-  // border: 1px  solid var(--border-color);
   font-size: 14px;
   color: var(--text-color-secondary);
   width: fit-content;
@@ -13,7 +11,7 @@
   span {
     font-size: 16px;
 
-    color: #333;
+    color: var(--text-color-secondary) !important;
 
     a {
       text-decoration: none;
