--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,12 +1,23 @@
 .sidebar {
+  position: fixed;
   display: flex;
   border-right: 1px solid var(--border-default);
-  padding: 0 12px;
+  height: 100%;
+  overflow-x: scroll;
+  overscroll-behavior: contain;
+  top: 0;
+  padding-top: 60px;
+  background: var(--sidebar-bg);
+
+  // hide scrollbar
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 
   /* Collapsed Sidebar */
   .collapsed-sidebar {
     width: 80px;
     padding-top: 3.5rem;
+    padding-top: 0;
   }
 
   /* Pop-Out Menu */
@@ -168,14 +179,6 @@
     cursor: pointer;
   }
 
-  .collapse-button {
-    width: 32px !important;
-    position: absolute;
-    top: 20px;
-    right: -22px;
-    z-index: 3;
-  }
-
   .submenu-title {
     color: var(--link-hover) !important;
     font-size: 16px;
@@ -192,7 +195,6 @@
     gap: 8px;
     color: var(--text-color-secondary) !important;
     margin: 0;
-    margin-top: 60px;
 
     @media (max-width: 768px) {
       display: none;
@@ -296,5 +298,36 @@
 
   .nav-link {
     gap: 8px;
+  }
+}
+
+.sidebar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background: var(--sidebar-bg);
+  z-index: 1000;
+  overflow-y: auto;
+  padding: 20px 0;
+  border-right: 1px solid var(--border-default);
+  transition: width 0.3s;
+}
+
+.sidebar-header {
+  position: fixed;
+  z-index: 2000;
+  width: 250px;
+
+  .collapse-button {
+    width: 32px !important;
+    position: absolute;
+    top: 20px;
+    right: -22px;
+    z-index: 3;
+  }
+
+  &.collapsed {
+    width: 80px;
   }
 }
