--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -2,6 +2,10 @@
   justify-content: center;
   height: 100vh;
   background-color: var(--background-color);
+  .form-group {
+    flex: 0 0 calc(50% - 0.25rem);
+  }
+
   .visitor-add-title {
     margin-bottom: 20px;
     font-size: var(--font-size-lg);
@@ -10,16 +14,6 @@
   }
   .visitor-wrapper {
     display: flex;
-  }
-  .mb-3 {
-    margin-bottom: 10px !important;
-  }
-  .visitors-all-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    background-color: var(--background-color);
   }
 
   .navigation-underline {
@@ -45,12 +39,6 @@
     font-size: 1rem;
     margin-bottom: 0;
     font-weight: var(--font-weight-bold);
-  }
-  .col-md-3 {
-    display: flex;
-
-    align-items: flex-end;
-    gap: 12px;
   }
 
   .form-control {
@@ -137,7 +125,7 @@
     }
   }
 }
-// //////  VIEW////////////////////////////////////////
+
 .visitor-view-container {
   padding: 10px;
 
